Updated JS - working fine

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   <h3></h3>
   <form>
     <input type="text" id="name_repo" name="field1" placeholder="Repository Link" />
-    <input onclick="main()" type="button" value="Visualize" class="pure-button
-    pure-button-primary"/>
+    <input onclick="main()" type="button" value="Visualize"
+    class="pure-button pure-button-primary"/>
   </form>
 </div>
 
-    <div id="graph"
-	 style="width:100%;height:100%;display:none;"></div>
+    <div id="graph" style="width:100%;height:100%;display:none;"></div>
     
     </center>
   </body>
